--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         android:theme="@style/Theme.NOTHApp"
         tools:targetApi="31">
         <activity
+            android:name=".PaymentMethodActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".OnBoardingActivity"
             android:exported="false"
             android:screenOrientation="portrait">
@@ -31,6 +38,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
